--- a/index.html
+++ b/index.html
@@ -195,6 +195,62 @@
     .app-wrapper { display: none; }
     .app-wrapper.authenticated { display: block; }
 
+    /* Password Gate */
+    .password-gate {
+      position: fixed;
+      inset: 0;
+      background: linear-gradient(135deg, #1a1a2e 0%, #16213e 50%, #1a1a2e 100%);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+    }
+    .password-gate.hidden { display: none; }
+    .password-card {
+      background: #16213e;
+      border-radius: 20px;
+      padding: 40px;
+      width: 100%;
+      max-width: 380px;
+      box-shadow: 0 20px 60px rgba(0,0,0,0.4);
+      text-align: center;
+    }
+    .password-card h2 {
+      font-size: 24px;
+      margin-bottom: 8px;
+      background: linear-gradient(135deg, #4a9eff, #00d4aa);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+    }
+    .password-card p {
+      font-size: 13px;
+      color: #888;
+      margin-bottom: 24px;
+    }
+    .password-card input {
+      width: 100%;
+      padding: 14px 16px;
+      background: #1a1a2e;
+      border: 2px solid #2d3a4f;
+      border-radius: 10px;
+      color: white;
+      font-size: 15px;
+      text-align: center;
+      margin-bottom: 16px;
+    }
+    .password-card input:focus {
+      outline: none;
+      border-color: #4a9eff;
+    }
+    .password-card .error {
+      color: #f44336;
+      font-size: 13px;
+      margin-bottom: 12px;
+      display: none;
+    }
+    .password-card .error.show { display: block; }
+
     /* Header */
     .header { background: linear-gradient(135deg, #1e3a5f 0%, #2d5a87 100%); padding: 16px 24px; display: flex; align-items: center; justify-content: space-between; }
     .header h1 { font-size: 24px; font-weight: 600; }
@@ -384,6 +440,17 @@
   </style>
 </head>
 <body>
+  <!-- Password Gate -->
+  <div class="password-gate" id="passwordGate">
+    <div class="password-card">
+      <h2>MicroSenses Mini</h2>
+      <p>This app is password protected</p>
+      <div class="error" id="passwordError">Incorrect password</div>
+      <input type="password" id="sitePassword" placeholder="Enter access password" autofocus>
+      <button class="auth-btn" id="passwordSubmit">Enter</button>
+    </div>
+  </div>
+
   <!-- Auth Container -->
   <div class="auth-container" id="authContainer">
     <div class="auth-card">
@@ -1932,6 +1999,37 @@
 
   <!-- Firebase Authentication Script -->
   <script>
+    // ========== PASSWORD GATE ==========
+    // Change this password to whatever you want to share with friends
+    const SITE_PASSWORD = 'microsenses2024';
+
+    const passwordGate = document.getElementById('passwordGate');
+    const passwordInput = document.getElementById('sitePassword');
+    const passwordError = document.getElementById('passwordError');
+    const passwordSubmit = document.getElementById('passwordSubmit');
+
+    // Check if already authenticated (session storage)
+    if (sessionStorage.getItem('siteAuth') === 'true') {
+      passwordGate.classList.add('hidden');
+    }
+
+    passwordSubmit.addEventListener('click', checkPassword);
+    passwordInput.addEventListener('keypress', (e) => {
+      if (e.key === 'Enter') checkPassword();
+    });
+
+    function checkPassword() {
+      if (passwordInput.value === SITE_PASSWORD) {
+        sessionStorage.setItem('siteAuth', 'true');
+        passwordGate.classList.add('hidden');
+        passwordError.classList.remove('show');
+      } else {
+        passwordError.classList.add('show');
+        passwordInput.value = '';
+        passwordInput.focus();
+      }
+    }
+
     // ========== DEMO MODE FLAG ==========
     let isDemoMode = false;
 
